# changelog-api

./: .gitignore  Dockerfile  README.md  dev-compose.yml  docker-compose.yml  example.env  pyproject.toml  sweep.yaml
src/: entrypoint.sh  manage.py
src/app/: admin.py  models.py  versioner.py
src/app/api/: serializers.py  urls.py  views.py
src/app/migrations/: 0001_initial.py  0002_alter_buildversion_options_alter_change_options.py
src/blog/: admin.py  models.py
src/blog/api/: serializers.py  urls.py  views.py
src/blog/migrations/: 0001_initial.py  0002_alter_post_body.py  0002_alter_post_options_remove_post_publish_and_more.py  0003_alter_post_body.py  0003_alter_post_type_section.py  0004_post_state_alter_post_publish.py  0004_remove_section_short_description.py  0005_post_type.py  0005_rename_body_post_deprecated_body.py  0006_alter_post_author_alter_post_date_created_and_more.py  0007_alter_section_heading.py  0008_remove_post_deprecated_body_post_socials_image_and_more.py
src/changelog_api/: asgi.py  settings.py  urls.py  wsgi.py
src/django_ckeditor_5/: package-lock.json
src/django_ckeditor_5/static/django_ckeditor_5/: app.js
src/django_ckeditor_5/static/django_ckeditor_5/src/: ckeditor.js
src/templates/admin/: change_form.html
tests/: test_sweep.yaml.py  test_sweep_template.py
