[tool.poetry]
name = "changelog-api"
version = "0.1.0"
description = ""
authors = ["Andrés Riquelme"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
python-dotenv = "^0.21.0"
djangorestframework = "^3.13.1"
whitenoise = "^6.2.0"
psycopg2-binary = "^2.9.3"
gunicorn = "^20.1.0"
django-cors-headers = "^3.13.0"
django-ckeditor = "^6.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
